--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red">#FF8080</color>
+    <color name="orange">#FFAA80</color>
+    <color name="yellow">#FFEA80</color>
+    <color name="green">#BFFF80</color>
+    <color name="cyan">#99FFEE</color>
+    <color name="purple">#9999FF</color>
+
 </resources>
