Fixed category editing (elements no deleting after editing). Category info now have height like images grid. Deleting images from device when tier list deletes.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="image_list_size">64dp</dimen>
     <dimen name="image_category_size">84dp</dimen>
     <dimen name="min_category_height">64dp</dimen>
+    <dimen name="border_width">1.dp</dimen>
 </resources>
