--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,8 @@
     <dimen name="item_spacing">5dp</dimen>
     <dimen name="item_arrangement">10dp</dimen>
     <dimen name="image_list_size">64dp</dimen>
-    <dimen name="image_category_size">84dp</dimen>
+    <dimen name="image_category_size">74dp</dimen>
     <dimen name="min_category_height">64dp</dimen>
-    <dimen name="border_width">1.dp</dimen>
+    <dimen name="border_width">1dp</dimen>
+    <dimen name="textfield_padding">15dp</dimen>
 </resources>
